--- a/.env.local.example
+++ b/.env.local.example
@@ -1,20 +1,20 @@
 # 环境配置文件示例
-# 文件位置: .env (根目录)
+# 文件位置: 根目录
 # 说明: 将此文件复制为 .env.local 并填入实际的配置值
 
 # ========== 应用环境 ==========
 APP_ENV=development
 APP_DEBUG=false
-APP_URL=https://nas.yeyhome.com:319
+APP_URL=https://your-domain.com
 APP_NAME=施工任务管理系统
 APP_VERSION=1.0.0
 
 # ========== 数据库配置 ==========
-DB_HOST=127.0.0.1
-DB_PORT=3307
-DB_NAME=todolist
-DB_USERNAME=root
-DB_PASSWORD=zmddh45683968.
+DB_HOST=127.0.0.1或者localhost或者远程数据库地址
+DB_PORT=3306
+DB_NAME=数据库名称
+DB_USERNAME=数据库用户名
+DB_PASSWORD=数据库密码
 DB_CHARSET=utf8mb4
 
 # 数据库连接池 (可选, 用于高并发)
@@ -35,7 +35,7 @@ SESSION_SECURE=false
 
 # ========== CORS配置 ==========
 # 多个源用逗号分隔
-CORS_ORIGINS=https://nas.yeyhome.com:319
+CORS_ORIGINS=https://your-domai
 CORS_CREDENTIALS=true
 
 # ========== 缓存配置 ==========
@@ -92,3 +92,4 @@ SHOW_STACK_TRACE=true
 SWAGGER_ENABLED=true
 # 模拟数据
 ENABLE_SEED_DATA=false
+
